content/terraform/v1.12.x/docs/language/state/remove.mdx
---
page_title: Remove a resource from Terraform state
description: Learn how to remove a resource from Terraform state without destroying it. 
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2023-01-01T00:00:00.000Z
last_modified: 2023-01-01T00:00:00.000Z
# END AUTO GENERATED METADATA
---

# Remove a resource from state

To remove a resource from Terraform state without destroying it, replace the `resource` block with a `removed` block and then apply the change using the standard Terraform workflow. When you remove a resource from state, Terraform no longer manages that infrastructure's lifecycle. For information about how to remove a resource from state and destroy the actual infrastructure, refer to [Destroy a resource](/terraform/language/resources/destroy).  

1. Replace the `resource` block from your configuration with a [`removed` block](/terraform/language/block/removed). 
1. Configure the following arguments in the `removed` block:

    - Specify the address of the resource you want to remove in the `from` argument. You cannot include instance keys, such as `"aws_instance.example[1]"`, if the resource is configured to provision multiple instances.
    - Add a `lifecycle` block to the `removed` block and set the `destroy` argument to `false`. Setting `destroy` to `true` removes the resource from state and destroys it. Refer to [Destroy a resource](/terraform/language/resources/destroy) for more information. 

1. Delete any references to the resource's attributes. You can run the `terraform validate` command to find references in your configuration.
1. Run `terraform apply` and confirm that you want to proceed when prompted.
 
The following example removes the `aws_instance.example` resource from state but does not destroy it:

```hcl
removed {
  from = aws_instance.example

  lifecycle {
    destroy = false
  }
}
```

Alternatively, you can use the [`terraform state rm` command](/terraform/cli/commands/state/rm) to remove a resource from state, but we recommend using the `removed` block instead. This is because the `removed` block lets you preview the results of the operation, which makes it a safer way to remove resources. 

If you want to resume managing the resource with Terraform, you must import the resource back into your configuration. Refer to [Import existing resources](/terraform/language/import) for more information.